--- a/SBI_Insurance/bin/.gitignore
+++ b/SBI_Insurance/bin/.gitignore
@@ -1,1 +1,9 @@
-/verification_commands/
+/browser_launch/
+/java/
+/java1/
+/other_package/
+/selenium_webdriver/
+/verificationcommands/
+/webdriver_locators/
+/validation_commands/
+/validationcommands/
