--- a/SBI_Insurance/.classpath
+++ b/SBI_Insurance/.classpath
@@ -21,5 +21,6 @@
 	<classpathentry kind="lib" path="D:/sunill/21st_Jan_2019_6PM/commons-io-2.6/commons-io-2.6-sources.jar"/>
 	<classpathentry kind="lib" path="D:/sunill/21st_Jan_2019_6PM/commons-io-2.6/commons-io-2.6-tests.jar"/>
 	<classpathentry kind="lib" path="D:/sunill/21st_Jan_2019_6PM/commons-io-2.6/commons-io-2.6-test-sources.jar"/>
+	<classpathentry kind="lib" path="D:/sunill/21st_Jan_2019_6PM/selenium-libraries/selenium-leg-rc-3.14.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
