pageobjects and  JunitFramework

--- a/SBI_Insurance/bin/.gitignore
+++ b/SBI_Insurance/bin/.gitignore
@@ -1,2 +1,19 @@
-/remotecontrol/
+/framework_junit/
+/pageobjects/
+/browser_launch/
+/findelements/
+/java/
 /java1/
+/javascript/
+/mouse_and_keyboard_Interactions/
+/other_package/
+/remotecontrol/
+/robot_actions/
+/screen_capture/
+/selenium_webdriver/
+/sikuli_scripting/
+/switch_commands/
+/validationcommands/
+/verificationcommands/
+/waitcommands/
+/webdriver_locators/
