--- a/SBI_Insurance/.classpath
+++ b/SBI_Insurance/.classpath
@@ -34,5 +34,7 @@
 	<classpathentry kind="lib" path="D:/sunill/24th_Jan_9AM_2019/selenium_libraries/poi-3.17/ooxml-lib/curvesapi-1.04.jar"/>
 	<classpathentry kind="lib" path="D:/sunill/24th_Jan_9AM_2019/selenium_libraries/poi-3.17/ooxml-lib/xmlbeans-2.6.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="D:/sunill/21st_Jan_2019_6PM/selenium-libraries/extentreports-2.41.2.jar"/>
+	<classpathentry kind="lib" path="D:/sunill/21st_Jan_2019_6PM/selenium-libraries/freemarker-2.3.23.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
