--- a/SBI_Insurance/bin/.gitignore
+++ b/SBI_Insurance/bin/.gitignore
@@ -1,1 +1,20 @@
+/datadriver_Framework/
 /extent_reports/
+/findelements/
+/framework_junit/
+/java/
+/java1/
+/javascript/
+/mouse_and_keyboard_Interactions/
+/other_package/
+/pageobjects/
+/remotecontrol/
+/robot_actions/
+/screen_capture/
+/selenium_webdriver/
+/sikuli_scripting/
+/switch_commands/
+/validationcommands/
+/verificationcommands/
+/waitcommands/
+/webdriver_locators/
